--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "query-string": "^6.13.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "reactstrap": "^8.9.0",
     "universal-cookie": "^4.0.4",
