--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "react-scripts": "4.0.1",
     "reactstrap": "^8.9.0",
     "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
     "universal-cookie": "^4.0.4",
     "yup": "^0.32.8"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -51,8 +54,7 @@
     "husky": "^4.3.8",
     "lint-staged": "^10.5.3",
     "prettier": "^2.2.1",
-    "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0"
+    "redux-devtools-extension": "^2.13.8"
   },
   "husky": {
     "hooks": {
