--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-spinners": "^0.10.4",
     "reactstrap": "^8.9.0",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
